fix(EventsManager): participant responses horizontal overflow (#75)

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -785,3 +785,8 @@ code {
 .ui.orange {
     background-color: #CD4D12 !important;
 }
+
+.x-scroll-table-container {
+    width: 100% !important;
+    overflow-x: auto !important;
+}
